# api-doc-builder

./: .env.development  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/api/: endpoints.py
app/core/: config.py  dev_redis.py  exceptions.py  logging.py  middleware.py  rate_limiter.py
app/db/: __init__.py  cli.py  database.py  health.py  models.py  repositories.py  repository_factory.py
app/jobs/: README.md  __init__.py  celery_app.py  cli.py  job_manager.py  job_service.py  models.py  status_tracker.py  tasks.py  worker.py
app/models/: __init__.py  quality.py
app/parsers/: __init__.py  base.py  graphql_parser.py  json_schema_parser.py  openapi_parser.py  parser_factory.py
app/services/: __init__.py  documentation_generator.py  error_pattern_tracker.py  file_error_handler.py  file_handler.py  genai_client.py  health_monitor.py  leaderboard_service.py  prompt_templates.py  quality_monitor.py  quality_scorer.py  quality_service.py  resource_manager.py
app/validators/: __init__.py  format_detector.py  validators.py
scripts/: create_export.py  setup_dev.py  test_setup.py
tests/: test_main.py
